tests/baselines/reference/tsxAttributeErrors.errors.txt
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(14,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(14,11): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(17,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(17,12): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(21,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(21,6): error TS2606: Property 'text' of JSX spread attribute is not assignable to target property.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(24,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/tsxAttributeErrors.tsx (7 errors) ====
    
    declare namespace JSX {
    	interface IntrinsicElements {
    		div: {
    			text?: string;
    			width?: number;
    		}
    
    		span: any;
    	}
    }
    
    // Error, number is not assignable to string
    <div text={42} />;
    ~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
              ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    // Error, string is not assignable to number
    <div width={'foo'} />;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
               ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
    // Error, number is not assignable to string
    var attribs = { text: 100 };
    <div {...attribs} />;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
         ~~~~~~~~~~~~
!!! error TS2606: Property 'text' of JSX spread attribute is not assignable to target property.
!!! error TS2606:   Type 'number' is not assignable to type 'string'.
    
    // No errors here
    <span foo='bar' bar={'foo'} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    